# neat3p

./: .clang-format  .gitignore  .gitmodules  CMakeLists.txt  Dockerfile  Makefile  README.md  dev-requirements.txt  environment.yml  pyproject.toml  requirements.txt
.claude/rules/: specs-folder-convention.md
.claude/skills/writing-specs/: SKILL.md
.github/ISSUE_TEMPLATE/: project_item.md
benchmarks/: README.md  __main__.py  artifacts.py  cartpole.py  cartpole_adaptive_hyperneat.py  cartpole_feature_attention.py  cartpole_recurrent_net.py  cli.py  lunarlander_feature_attention.py  models.py  report.py  retina_hyper_neat.py  runner.py  suite.py  tasks.py  voxel_forage_adaptive_hyperneat.py  voxel_forage_feature_attention.py  voxel_forage_hyper_neat.py  voxel_forage_play.py  voxel_forage_recurrent_net.py  voxel_forage_replay.py  voxel_forage_suite.py
benchmarks/configs/: cartpole_adaptive_hyperneat.cfg  retina_hyper_neat.cfg  voxel_forage.cfg  voxel_forage_adaptive_hyperneat.cfg  voxel_forage_feature_attention.cfg  voxel_forage_hyper_neat.cfg  voxel_forage_recurrent_net.cfg
benchmarks/output/: .gitignore
benchmarks/runners/: gym_eval.py
schemas/: Gene.fbs
src/: attributes.hpp  config.hpp  genes.cpp  genes.hpp  genome.cpp  genome.hpp  neat3p.cpp  neat3p.hpp
src/neat3p/: __init__.py  aggregations.py  attributes.py  checkpoint.py  config.py  distributed.py  genes.py  genome.py  graphs.py  math_util.py  population.py  reporting.py  reproduction.py  species.py  stagnation.py  statistics.py  utils.py
src/neat3p/benchmarks/: __init__.py  artifacts.py  substrates.py
src/neat3p/benchmarks/envs/: __init__.py  voxel_forage.py
src/neat3p/benchmarks/runners/: gym_eval.py
src/neat3p/gym_envs/: __init__.py  substrates.py  voxel_forage.py
src/neat3p/nn/: NOTICE  __init__.py
src/neat3p/nn/composite/: __init__.py  adaptive.py  attention_nets.py  encoder_controller.py  feature_attention.py  hyper_neat.py  neat_base.py  neat_recurrent.py
src/neat3p/nn/modules/: __init__.py  activations.py  aggregations.py  attention.py  encoders.py
src/neat3p/nn/phenotypes/: __init__.py  cppn.py  feed_forward_net.py  recurrent_net.py
tests/: test_activation.py  test_aggregation.py  test_config.py  test_config_save_restore.py  test_genes.py  test_genome.py  test_graphs.py  test_nn.py  test_population.py  test_reproduction.py  test_utils.py
tests/benchmarks/: test_benchmarks_unit.py  test_cartpole.py  test_cartpole_feature_attention.py  test_cartpole_recurrent_net.py
tests/benchmarks/configs/: cartpole.cfg  lunarlander.cfg
tests/nn/: test_parity.py  test_xor.py
tests/nn/configs/: xor.cfg
tests/nn/fixtures/: cppn_output.npy  generate_fixtures.py  recurrent_net_output.npy
