[build-system]
requires = [
    "scikit-build-core",
    "nanobind>=1.3.2"
]

build-backend = "scikit_build_core.build"


[project]
name = "neat3p"
version = "0.0.1"
authors = [
    { name = "Arthur R. Moreno", email = "morenorarthur@gmail.com" },
]
description = "Neat Python, Amplified by C++ Boost"
readme = "README.md"
requires-python = ">=3.12"
classifiers = [
    "Development Status :: 3 - Alpha",
    "Intended Audience :: Science/Research",
    "License :: OSI Approved :: GNU General Public License v3 (GPLv3)",
    "Operating System :: OS Independent",
    "Programming Language :: Python",
    "Programming Language :: Python :: 3.12",
    "Topic :: Scientific/Engineering",
    "Topic :: Utilities",
]

[project.urls]
"Homepage" = "https://github.com/arthurmoreno/neat3p"

[tool.scikit-build]
cmake.verbose = true
# cmake.build-type = "Debug"

build-dir = "build/{wheel_tag}"

# Build stable ABI wheels for CPython 3.12+
wheel.py-api = "cp312"